<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iterate_once" />

    <RelativeLayout
        android:id="@+id/canvas"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="#444"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072">

    </RelativeLayout>

    <Button
        android:id="@+id/start_circle_packing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/start_circle_packing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <Button
        android:id="@+id/iterate_once"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/iterate_once"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_circle_packing" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="291dp"
        android:layout_height="82dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/canvas">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_numOfCircles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_numOfCircles" />

            <TextView
                android:id="@+id/view_numOfCircles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_numOfCircles" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/text_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_area" />

            <TextView
                android:id="@+id/view_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_area" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/text_stepSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_stepSize" />

            <TextView
                android:id="@+id/view_stepSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_stepSize" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/text_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_distance" />

            <TextView
                android:id="@+id/view_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_distance" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>